@@ -26,8 +26,8 @@ Readonly::Scalar my $GENOTYPE_DATA => 'sgd';
 Readonly::Scalar my $SAMTOOLS_NAME => q[samtools_irods];
 Readonly::Scalar my $SAMTOOLS_EXTRACT_REGIONS_NAME => q[samtools1];
 Readonly::Scalar my $SAMTOOLS_MERGE_NAME => q[samtools1];
-Readonly::Scalar my $SAMTOOLS_MPILEUP_NAME => q[samtools]; # old mpileup format still needed until new bcftools can be used
-Readonly::Scalar my $BCFTOOLS_NAME => q[bcftools];
+Readonly::Scalar my $SAMTOOLS_MPILEUP_NAME => q[samtools1];
+Readonly::Scalar my $BCFTOOLS_NAME => q[bcftools1];
 Readonly::Scalar our $EXT => q[bam];
 Readonly::Scalar my $SEQUENOM_QC_PLEX => q[W30467];
 Readonly::Scalar my $DEFAULT_QC_PLEX => q[sequenom_fluidigm_combo];
